Actions
Bug #9300
closedin.mpathd: this statement may fall through
Start date:
2018-03-17
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issue found by gcc 7 build:
mpd_main.c: In function 'loopback_cmd': mpd_main.c:2329:7: error: this statement may fall through [-Werror=implicit-fallthrough=] if (!IN6_IS_ADDR_LOOPBACK(&peer_sin6->sin6_addr)) { mpd_main.c:2336:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2dfb867586bd1d3168e074ad1c8722bba53290e3
commit 2dfb867586bd1d3168e074ad1c8722bba53290e3 Author: Toomas Soome <tsoome@me.com> Date: 2018-03-25T18:16:16.000Z 9300 in.mpathd: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.net> Approved by: Gordon Ross <gwr@nexenta.com>
Actions