9300 in.mpathd: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.net> Approved by: Gordon Ross <gwr@nexenta.com>